# leonardo-theme-soc

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
leonardo_theme_soc/: __init__.py
leonardo_theme_soc/static/themes/soc/testsoc/: _styles.scss
leonardo_theme_soc/templates/base/page/: soc.html
